--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.26.0",
+    "bootstrap-vue": "^2.22.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vuelidate": "^0.7.7",
