--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "bootstrap-vue": "^2.22.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-router": "^3.5.4",
     "vuelidate": "^0.7.7",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.12",
     "@vue/cli-plugin-eslint": "~4.5.12",
+    "@vue/cli-plugin-router": "^4.5.19",
     "@vue/cli-plugin-vuex": "~4.5.12",
     "@vue/cli-service": "~4.5.12",
     "babel-eslint": "^10.1.0",
